Upgraded scams.html with professional cards and layout

--- a/scams.html
+++ b/scams.html
@@ -1,38 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Scam Types</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Types of UPI Scams</title>
+  <link rel="stylesheet" href="assets/style.css" />
 </head>
 <body>
-    <header>
-        <h1>Common UPI Scams</h1>
-        <nav>
-            <a href="index.html">Home</a> 
-            <a href="scams.html">Scam Types</a>
-            <a href="tips.html">Safety Tips</a>
+  <header>
+    <h1>Types of UPI Scams</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="tips.html">Safety Tips</a>
+      <a href="report.html">Report Scam</a>
+    </nav>
+  </header>
 
-        </nav>
-    </header>
-    <main>
-      <div class="card">
-        <h3>QR code scams</h3>
-      <p>Fraudsters send fake QR codes asking for payments. Scanning may drain your account!</p> 
+  <main class="scams-container">
+    <div class="scam-card">
+      <h2>📞 Phishing Calls</h2>
+      <p>Fraudsters pose as bank officials asking for OTPs or UPI PINs.</p>
     </div>
-      <div class="card">
-        <h3>Phishing calls</h3>
-      <p>Fake calls pretending to be bank/customer care asking for OTP or UPI PIN.</p>
+    <div class="scam-card">
+      <h2>📲 Fake UPI Apps</h2>
+      <p>Scammers trick users into downloading fake UPI apps that steal credentials.</p>
     </div>
-      <div class="card">
-        <h3>SIM swap</h3>
-      <p>Scammer gets a new SIM issued for your number and takes control of your bank-linked OTPs.</p>
+    <div class="scam-card">
+      <h2>🔗 QR Code Scams</h2>
+      <p>Users are asked to scan a QR code to “receive” money, but actually end up paying.</p>
     </div>
-    </main>
-    <footer>
-        <p>Stay Aware , Stay Safe !</p>
-    </footer>
-    
+    <div class="scam-card">
+      <h2>📶 SIM Swap</h2>
+      <p>Scammers duplicate your SIM card to intercept OTPs and hack accounts.</p>
+    </div>
+  </main>
+
+  <footer>
+    <p>  UPI Fraud Awareness</p>
+  </footer>
 </body>
 </html>
