--- a/tips.html
+++ b/tips.html
@@ -1,30 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Safety Tips</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Safety Tips</title>
+  <link rel="stylesheet" href="assets/style.css" />
 </head>
 <body>
-    <header>
-        <h1>Safety Tips </h1>
-         <nav>
-      <a href="index.html"> Home</a> 
-      <a href="scams.html"> Scam Types</a>
-      <a href="tips.html"> Safety Tips</a>
-     </nav>
-    </header>
-    <main>
-        <ul>
-      <li> Never share your UPI PIN or OTP with anyone.</li>
-      <li> Verify UPI handles before making transactions.</li>
-      <li> Don’t scan QR codes from unknown sources.</li>
-      <li> Keep your SIM locked and protected.</li>
-      <li> Report suspicious activity to your bank immediately.</li>
-      </ul>
-        
-    </main>
-    <footer><p>Be alert. Be aware. Be secure </p></footer>
-</body>
-</html>
+  <header>
+    <h1>Stay Safe from UPI Frauds</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="scams.html">Scam Types</a>
+      <a href="report.html">Report Scam</a>
+    </nav>
+  </header>
+
+  <main class="tips-container">
+    <div class="tip-card">
+      <h2>🧠 Never Share Your UPI PIN</h2>
+      <p>Even bank officials should not ask for your PIN. Keep it secret, always.
