Styled report.html with form layout and UI

--- a/tips.html
+++ b/tips.html
@@ -19,4 +19,28 @@
   <main class="tips-container">
     <div class="tip-card">
       <h2>🧠 Never Share Your UPI PIN</h2>
-      <p>Even bank officials should not ask for your PIN. Keep it secret, always.
+      <p>Even bank officials should not ask for your PIN. Keep it secret, always.</p>
+    </div>
+    <div class="tip-card">
+      <h2>🔒 Use Official UPI Apps Only</h2>
+      <p>Install apps only from trusted sources like Google Play Store or App Store.</p>
+    </div>
+    <div class="tip-card">
+      <h2>🚫 Don’t Scan Random QR Codes</h2>
+      <p>Scammers may trick you into scanning codes that deduct money.</p>
+    </div>
+    <div class="tip-card">
+      <h2>📲 Enable UPI App Locks</h2>
+      <p>Add an app lock (PIN/Fingerprint) for extra security on your UPI apps.</p>
+    </div>
+    <div class="tip-card">
+      <h2>⚠️ Stay Alert of Fake Customer Care</h2>
+      <p>Scammers pretend to be support agents — don’t trust random numbers.</p>
+    </div>
+  </main>
+
+  <footer>
+    <p>© 2025 UPI Fraud Awareness</p>
+  </footer>
+</body>
+</html>
