Updated script URL for working Google Sheets backend

--- a/report.html
+++ b/report.html
@@ -17,7 +17,8 @@
   </header>
 
   <main class="report-container">
-    <form action="thankyou.html" method="post" class="report-form">
+   <form name="report-form" class="report-form">
+
       <label for="name">👤 Your Name:</label>
       <input type="text" id="name" name="name" required>
 
@@ -44,5 +45,7 @@
   <footer>
     <p>© 2025 UPI Fraud Awareness</p>
   </footer>
+  <script src="assets/script.js"></script>
+
 </body>
 </html>
